<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crowd_nav</name>
  <version>0.0.0</version>
  <description>A package for performing crowd navigation with a Unitree Go1 robot</description>
  <maintainer email="katiereeshughes@gmail.com">Katie Hughes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>crowd_nav_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
